--- a/scss/theme/_header.scss
+++ b/scss/theme/_header.scss
@@ -1,1 +1,30 @@
 
+
+header{
+    .header-action{
+        
+        
+        .small-cart{
+            position:relative;
+            .fa{
+                font-size: 38px;
+            }
+            
+            span{
+                position: absolute;
+                top:2px;
+                right: 3px;
+                width: 15px;
+                height: 15px;
+                border-radius: 50%;
+                background: red;
+                color: #fff;
+                line-height: 15px;
+                font-size: 10px;
+                text-align: center;
+            }
+        }
+    }
+
+
+}
