--- a/scss/theme/_fonts.scss
+++ b/scss/theme/_fonts.scss
@@ -1,2 +1,72 @@
 
 
+@font-face {
+  font-family: 'BurbankSmall-Bold';
+  src: url('../fonts/BurbankSmall-Bold/BurbankSmall-Bold.eot?#iefix') format('embedded-opentype'),  url('../fonts/BurbankSmall-Bold/BurbankSmall-Bold.otf')  format('opentype'),
+	     url('../fonts/BurbankSmall-Bold/BurbankSmall-Bold.woff') format('woff'), url('../fonts/BurbankSmall-Bold/BurbankSmall-Bold.ttf')  format('truetype'), url('../fonts/BurbankSmall-Bold/BurbankSmall-Bold.svg#BurbankSmall-Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+$font-burbank-bold: 'BurbankSmall-Bold';
+
+@font-face {
+  font-family: 'GothamRounded-Bold';
+  src: url('../fonts/GothamRounded-Bold/GothamRounded-Bold.eot?#iefix') format('embedded-opentype'),  url('../fonts/GothamRounded-Bold/GothamRounded-Bold.otf')  format('opentype'),
+	     url('../fonts/GothamRounded-Bold/GothamRounded-Bold.woff') format('woff'), url('../fonts/GothamRounded-Bold/GothamRounded-Bold.ttf')  format('truetype'), url('../fonts/GothamRounded-Bold/GothamRounded-Bold.svg#GothamRounded-Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+$font-gotham-bold:'GothamRounded-Bold';
+
+@font-face {
+  font-family: 'GothamRounded-BoldItalic';
+  src: url('../fonts/GothamRounded-BoldItalic/GothamRounded-BoldItalic.eot?#iefix') format('embedded-opentype'),  url('../fonts/GothamRounded-BoldItalic/GothamRounded-BoldItalic.otf')  format('opentype'),
+	     url('../fonts/GothamRounded-BoldItalic/GothamRounded-BoldItalic.woff') format('woff'), url('../fonts/GothamRounded-BoldItalic/GothamRounded-BoldItalic.ttf')  format('truetype'), url('../fonts/GothamRounded-BoldItalic/GothamRounded-BoldItalic.svg#GothamRounded-BoldItalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+$font-gotham-bold-italic: 'GothamRounded-BoldItalic';
+
+@font-face {
+  font-family: 'GothamRounded-Book';
+  src: url('../fonts/GothamRounded-Book/GothamRounded-Book.eot?#iefix') format('embedded-opentype'),  url('../fonts/GothamRounded-Book/GothamRounded-Book.otf')  format('opentype'),
+	     url('../fonts/GothamRounded-Book/GothamRounded-Book.woff') format('woff'), url('../fonts/GothamRounded-Book/GothamRounded-Book.ttf')  format('truetype'), url('../fonts/GothamRounded-Book/GothamRounded-Book.svg#GothamRounded-Book') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+$font-gotham-book: 'GothamRounded-Book';
+
+@font-face {
+  font-family: 'GothamRounded-BookItalic';
+  src: url('../fonts/GothamRounded-BookItalic/GothamRounded-BookItalic.eot?#iefix') format('embedded-opentype'),  url('../fonts/GothamRounded-BookItalic/GothamRounded-BookItalic.otf')  format('opentype'),
+	     url('../fonts/GothamRounded-BookItalic/GothamRounded-BookItalic.woff') format('woff'), url('../fonts/GothamRounded-BookItalic/GothamRounded-BookItalic.ttf')  format('truetype'), url('../fonts/GothamRounded-BookItalic/GothamRounded-BookItalic.svg#GothamRounded-BookItalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+$font-gotham-book-italic: 'GothamRounded-BookItalic';
+
+@font-face {
+  font-family: 'GothamRounded-Light';
+  src: url('../fonts/GothamRounded-Light/GothamRounded-Light.eot?#iefix') format('embedded-opentype'),  url('../fonts/GothamRounded-Light/GothamRounded-Light.otf')  format('opentype'),
+	     url('../fonts/GothamRounded-Light/GothamRounded-Light.woff') format('woff'), url('../fonts/GothamRounded-Light/GothamRounded-Light.ttf')  format('truetype'), url('../fonts/GothamRounded-Light/GothamRounded-Light.svg#GothamRounded-Light') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+$font-gotham-light: 'GothamRounded-Light';
+
+@font-face {
+  font-family: 'GothamRounded-LightItalic';
+  src: url('../fonts/GothamRounded-LightItalic/GothamRounded-LightItalic.eot?#iefix') format('embedded-opentype'),  url('../fonts/GothamRounded-LightItalic/GothamRounded-LightItalic.otf')  format('opentype'),
+	     url('../fonts/GothamRounded-LightItalic/GothamRounded-LightItalic.woff') format('woff'), url('../fonts/GothamRounded-LightItalic/GothamRounded-LightItalic.ttf')  format('truetype'), url('../fonts/GothamRounded-LightItalic/GothamRounded-LightItalic.svg#GothamRounded-LightItalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+$font-gotham-light-italic: 'GothamRounded-Light';
+
