--- a/css/theme.css
+++ b/css/theme.css
@@ -62,6 +62,10 @@ img {
     left: 0;
     width: 100%; }
 
+.section-title {
+  background-position: center;
+  background-repeat: no-repeat; }
+
 /* Buzz Out */
 @-webkit-keyframes buzz {
   10% {
