--- a/scss/theme/_icons.scss
+++ b/scss/theme/_icons.scss
@@ -2,7 +2,14 @@
 
 
 .icons-slider-wrapper{
-    
+    .icons-slider{
+        .icon{
+            img{
+                width: auto !important;
+            }
+        }
+
+    }
 }
 
 
