--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -10,3 +10,5 @@
 @import "theme/_form.scss";
 @import "theme/_header.scss";
 @import "theme/_footer.scss";
+@import "theme/_icons.scss";
+@import "theme/_slider.scss";
